--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Jonathan's Blog
 SEOTitle: Jonathan's Blog | CoDe1230
-header-img: https://i0.wp.com/iammagnus.com/wp-content/uploads/2016/05/website-design-background-1.jpg
+header-img: https://github.com/grasscaograss/grasscaograss.github.io/blob/master/oriental-pearl-tower-wallpaper-1.jpg?raw=true
 email: caozengjie@outlook.com
 description: "Computational Design | Z5173508"
 keyword: "Code, code, 1230, Jonathan, Z5173508, 5173508, z5173508"
