--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ sidebar-avatar: https://previews.dropbox.com/p/thumb/AALWpLq6pNBvenY5167Zl72AX-F
 
 # SNS settings
 RSS: false
-weibo_username:     咖啡纸杯蛋糕厨
+weibo_username:     u/5444445211?refer_flag=1001030201_&is_hot=1
 github_username:    grasscaograss
 
 
