--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ header-img: img/oriental-pearl-tower-wallpaper-1.jpg
 email: caozengjie@outlook.com
 description: "Computational Design | Z5173508"
 keyword: "Code, code, 1230, Jonathan, Z5173508, 5173508, z5173508"
-url: "http://grasscaograss.github.io"          # your host, for absolute URL
+url: "jonathan1230.top"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/grasscaograss/grasscaograss.github.io.git" # you code repository
+github_repo: "https://github.com/grasscaograss/CoDe1230-Jonathan.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
