--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ header-img: img/oriental-pearl-tower-wallpaper-1.jpg
 email: caozengjie@outlook.com
 description: "Computational Design | Z5173508"
 keyword: "Code, code, 1230, Jonathan, Z5173508, 5173508, z5173508"
-url: "jonathan1230.top"          # your host, for absolute URL
+url: "https://grasscaograss.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/grasscaograss/CoDe1230-Jonathan.git" # you code repository
+github_repo: "https://github.com/grasscaograss/grasscaograss.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
@@ -60,7 +60,7 @@ gitalk:
   enable: true    #是否开启Gitalk评论
   clientID: 2c56508a134665bc249a                        #生成的clientID
   clientSecret: 3af616bcc605380c7f5716e2dec915889059c759   #生成的clientSecret
-  repo:  CoDe1230-Jonathan    #仓库名称
+  repo:  grasscaograss.github.io   #仓库名称
   owner: grasscaograss    #github用户名
   admin: grasscaograss
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
